[package]
name = "tweet-sweeper"
version = "0.1.0"
authors = ["alhuelamo <alhuelamo+git@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.1"
toml = "0.5.6"
serde = "1.0.115"
serde_derive = "1.0.115"
egg-mode = "0.15"
tokio = "0.2"
futures = "0.3"
chrono = "0.4"
